XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
obsproc_dump release 5.0.0 --> released Aug ??, 2018
                           --> implemented ??? ??,2018 

files:
   obsproc_dump/fix/bufr_bufrtab.sptrmm
   obsproc_dump/fix/bufr_bufrtab.windsat
   obsproc_dump/fix/nam_expdomain_guam_halfdeg_imask.gbl
   obsproc_dump/fix/nam_expdomain_halfdeg_imask.gbl
   obsproc_dump/fix/wave_bufrtab.ascat
   obsproc_dump/fix/wave_bufrtab.erscat
   obsproc_dump/fix/wave_bufrtab.quikscat
   obsproc_dump/fix/wave_landchxh
 D obsproc_dump/modulefiles/dumpjb/4.1.0
 A obsproc_dump/modulefiles/dumpjb/5.0.0
   obsproc_dump/sorc/bufr_chkbfr.fd/chkbfr.f
   obsproc_dump/sorc/bufr_chkbfr.fd/makefile
   obsproc_dump/sorc/bufr_combfr.fd/combfr.f
   obsproc_dump/sorc/bufr_combfr.fd/makefile
   obsproc_dump/sorc/bufr_dcodwindsat.fd/dcodwindsat.f
   obsproc_dump/sorc/bufr_dcodwindsat.fd/makefile
   obsproc_dump/sorc/bufr_dumpmd.fd/dumpmd.f
   obsproc_dump/sorc/bufr_dumpmd.fd/makefile
   obsproc_dump/sorc/bufr_dupair.fd/dupair.f
   obsproc_dump/sorc/bufr_dupair.fd/makefile
   obsproc_dump/sorc/bufr_dupcor.fd/dupcor.f
   obsproc_dump/sorc/bufr_dupcor.fd/makefile
   obsproc_dump/sorc/bufr_dupmar.fd/dupmar.f
   obsproc_dump/sorc/bufr_dupmar.fd/makefile
   obsproc_dump/sorc/bufr_dupmrg.fd/dupmrg.f
   obsproc_dump/sorc/bufr_dupmrg.fd/makefile
   obsproc_dump/sorc/bufr_duprad.fd/duprad.f
   obsproc_dump/sorc/bufr_duprad.fd/makefile
M  obsproc_dump/sorc/bufr_dupsat.fd/dupsat.f
   obsproc_dump/sorc/bufr_dupsat.fd/makefile
   obsproc_dump/sorc/bufr_dupshp.fd/dupshp.f
   obsproc_dump/sorc/bufr_dupshp.fd/makefile
   obsproc_dump/sorc/bufr_dupsst.fd/dupsst.f
   obsproc_dump/sorc/bufr_dupsst.fd/makefile
   obsproc_dump/sorc/bufr_edtbfr.fd/edtbfr.f
   obsproc_dump/sorc/bufr_edtbfr.fd/makefile
   obsproc_dump/sorc/bufr_geofil.fd/geofil.f
   obsproc_dump/sorc/bufr_geofil.fd/makefile
   obsproc_dump/sorc/bufr_quipc.fd/makefile
   obsproc_dump/sorc/bufr_quipc.fd/quipc.f