@@ -1,7 +1,7 @@
 C$$$  MAIN PROGRAM DOCUMENTATION BLOCK
 C
 C MAIN PROGRAM: BUFR_CHKBFR
-C   PRGMMR: KEYSER           ORG: NP22        DATE: 2013-01-13
+C   PRGMMR: MELCHIOR         ORG: NP22        DATE: 2018-10-29
 C
 C ABSTRACT: CHECKS A LIST OF BUFR FILES (ALL IN THE SAME GROUP,
 C   USUALLY ALL OF THE SAME MESSAGE TYPE AND ALWAYS ALL USING THE
@@ -90,6 +90,10 @@ C     INFORMATION
 C 2012-11-20  J. WOOLLEN  INITIAL PORT TO WCOSS - ADDED SETBMISS CALL
 C 2013-01-13  J. WHITING  FINAL WCOSS PORT -- UPDATED DOC BLOCKS, NO
 C     LOGIC CHANGES.
+C 2018-10-29  S. MELCHIOR ADDED V8 BUFR OMPS NP (NC008017) AND V8
+C     BUFR OMPS TC (NC008018) TO LIST OF SATELLITE TYPES FOR WHICH
+C     PRINTS OF COUNTS BY SATELLITE ID ARE ADDED UNDER TOTAL DUMP
+C     COUNT IN STANDARD OUTPUT PRINT
 C 
 C
 C USAGE:
@@ -150,9 +154,9 @@ C$$$
 C-----------------------------------------------------------------------
 C-----------------------------------------------------------------------
 
-      CALL W3TAGB('BUFR_CHKBFR',2013,0013,0050,'NP22')
+      CALL W3TAGB('BUFR_CHKBFR',2018,0302,0050,'NP22')
 
-      PRINT'(" ==> Welcome to BUFR_CHKBFR -- Version 01-13-2013"/)'
+      PRINT'(" ==> Welcome to BUFR_CHKBFR -- Version 10-29-2018"/)'
 
 
 C  Set BUFR "missing" values from their default of 10.e10 to the smaller
@@ -281,7 +285,11 @@ C      ------------------------------------------------------
      . .OR.
      . FILENAME(JJJ-3:JJJ+3).EQ.'008.012'
      . .OR.
-     . FILENAME(JJJ-3:JJJ+3).EQ.'008.013')
+     . FILENAME(JJJ-3:JJJ+3).EQ.'008.013'
+     . .OR.
+     . FILENAME(JJJ-3:JJJ+3).EQ.'008.017'
+     . .OR.
+     . FILENAME(JJJ-3:JJJ+3).EQ.'008.018')
 
 C  DISTINGUISH BETWEEN SATELLITE, LEVEL 2 RADAR, TDR RADAR AND LEVEL 3/
 C   2.5 RADAR TYPES.  FOR ALL TYPES EXCEPT LEVEL 3/2.5 RADAR, PRIMARY
